# meeting-recorder

./: .gitignore  README.md  index.html  package.json
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: ai_service.rs  audio.rs  config.rs  lib.rs  main.rs  transcription.rs  utils.rs
src/components/: RecordingPanel.tsx  SettingsModal.tsx  SummaryPanel.tsx  TranscriptView.tsx
src/hooks/: useAppStore.ts
src/styles/: global.css
src/types/: index.ts
