[package]
name = "meeting-recorder"
version = "1.0.0"
description = "轻量化、高兼容性、强隐私保护的本地会议记录工具"
authors = ["Developer"]
edition = "2021"

[lib]
name = "meeting_recorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
hound = "3.5"
cpal = "0.15"
base64 = "0.22"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
anyhow = "1.0"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
